--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -28,6 +28,7 @@
     <!-- style CSS -->
     <link rel="stylesheet" href="/user/css/style.css" />
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   </head>
 
   <body>
