--- a/view/user/cart.ejs
+++ b/view/user/cart.ejs
@@ -120,9 +120,10 @@
               </tr> -->
             </tbody>
           </table>
-          <div style="text-align: right;"></div>
-          <h5>Subtotal</h5>
-<h5>₹ <span id="total"></span></h5>
+          <div style="text-align: right;">
+            <h5>Subtotal: ₹ <span id="total"></span></h5>
+
+          </div>
           <div class="checkout_btn_inner float-right">
             <a class="btn_1" href="/shop">Continue Shopping</a>
             <a class="btn_1 checkout_btn_1" href="/checkout">Proceed to checkout</a>
