--- a/view/user/shop.ejs
+++ b/view/user/shop.ejs
@@ -33,10 +33,10 @@
                             </div>
                             <div class="widgets_inner">
                                 <ul class="list">
-                                    <% category.forEach(element => { %>
+                                    <% cat.forEach(element => { %>
                                         <li>
-                                            <a href="/<%= element.title %>"><%= element.title %> </a>
-                                            <span>(250)</span>
+                                            <a href="/shop/category/<%= element._id %>"><%= element.cat[0].title %> </a>
+                                            <span>(<%= element.count %>)</span>
                                         </li>
                                     <% }) %>
                                 </ul>
@@ -51,7 +51,7 @@
                                 <ul class="list">
                                     <% brand.forEach(element => { %>
                                         <li>
-                                            <a href="/<%= element.title %>"><%= element.title %> </a>
+                                            <a href="/shop/brand/<%= element._id %>"><%= element.title %> </a>
                                         </li>
                                     <% }) %>
                                 </ul>
@@ -112,7 +112,7 @@
                         <div class="col-lg-12">
                             <div class="product_top_bar d-flex justify-content-between align-items-center">
                                 <div class="single_product_menu">
-                                    <p><span>10000 </span> Product Found</p>
+                                    <p><span><%= count %>  </span> Products Found</p>
                                 </div>
                                 <div class="single_product_menu d-flex">
                                     <h5>short by : </h5>
